# Clean_up

./: .gitignore  CMakeLists.txt  clean.cpp  clean.hpp  cores.hpp  main.cpp
